2009-12-09  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Crash fix during rotation if no hsm.

	* src/home/hd-render-manager.c (hd_render_manager_remove_input_blocker)
	* src/util/hd-transition.c (hd_transition_rotating_fsm):
	  Some code assumed that priv->status_area != NULL.

2009-12-08  Marc Ordinas i Llopis <marc.ordinasillopis@collabora.co.uk>

	Listen to theme change signal and reload the task launcher when received.
	Fixes: NB#145905
	
	* src/launcher/hd-launcher-tree.c:

2009-12-08  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Fix the fix of NB#149091 - Desktop does not respect PORTRAIT_CAPABLE
	flag correctly as Urho imagined.  The accelerometer was only turned
	on when we restacked, not when the property was set via the shortcut.

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_client_init):
	  Don't activate_accel_if_needed() here because we'll restack anyway.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_client_property_changed):
	  ...but do that when the property is changed.

2009-12-08  Gordon Williams <gordon.williams@collabora.co.uk>

	Minor bugfix.
	
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_check_do_not_disturb_flag): if we
	  are in task nav, xwindow is set to 0xFFFFFFFF - and we don't check
	  for this case, and hence try and get the DND property from an invalid
	  window.

2009-12-07  Gordon Williams <gordon.williams@collabora.co.uk>

	Code tidyup. Remove HDRM_BUTTON*, as it is now all handled by 
	HdTitleBar. This was part of 131081 that was reverted because of
	regressions caused by other changes in the same patch.

	* src/home/hd-render-manager.c/h: Remove references to HdTitleBar 
	  buttons, as well as code to get/set them. Remove HDRM_BUTTON enums,
	  and handle input viewport based on LEFT/RIGHT item masks in title bar
	* src/home/hd-home.c/h: Handle edit button directly, do back button in
	  HdTitleBar
	* src/home/hd-title-bar.c: Don't set HDRM buttons, and ensure that we
	  handle Launcher back button if it is ever made visible.